# phat

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bootstrap  configure  configure.ac  phat.pc.in  phat.spec.in
demos/: Makefile.am  Makefile.in  fanslider.c  keyboard.c  knob.c  pad.c  sliderbutton.c
docs/: Makefile.am  Makefile.in  phat-docs.sgml  phat-sections.txt  phat.types
docs/html/: PhatFanSlider.html  PhatHFanSlider.html  PhatHKeyboard.html  PhatKeyboard.html  PhatSliderButton.html  PhatVFanSlider.html  PhatVKeyboard.html  index.html  index.sgml  install.html  phat-PhatKnob.html  phat-PhatPad.html  phat.devhelp  phat.devhelp2  phat.html  phatwidgets.html  use.html
docs/tmpl/: phat-unused.sgml  phat.sgml  phatfanslider.sgml  phathfanslider.sgml  phathkeyboard.sgml  phatkeyboard.sgml  phatknob.sgml  phatpad.sgml  phatsliderbutton.sgml  phatvfanslider.sgml  phatvkeyboard.sgml
docs/xml/: phatfanslider.xml  phathfanslider.xml  phathkeyboard.xml  phatkeyboard.xml  phatknob.xml  phatpad.xml  phatsliderbutton.xml  phatvfanslider.xml  phatvkeyboard.xml
phat/: Makefile.am  Makefile.in  config.h.in  phatfanslider.c  phatfanslider.h  phathfanslider.c  phathkeyboard.c  phatkeyboard.c  phatknob.c  phatknob.h  phatpad.c  phatpad.h  phatprivate.c  phatprivate.h  phatsliderbutton.c  phatvfanslider.c
pixmaps/: Makefile.am  Makefile.in
