bin_PROGRAMS = phatfanslider phatsliderbutton phatkeyboard phatpad phatknob

phatfanslider_SOURCES = fanslider.c
phatfanslider_CFLAGS = `pkg-config --cflags gtk+-2.0` -I..
phatfanslider_LIBS = `pkg-config --libs gtk+-2.0`
phatfanslider_LDADD = ../phat/libphat.la

phatsliderbutton_SOURCES = sliderbutton.c
phatsliderbutton_CFLAGS = `pkg-config --cflags gtk+-2.0` -I..
phatsliderbutton_LIBS = `pkg-config --libs gtk+-2.0`
phatsliderbutton_LDADD = ../phat/libphat.la

phatkeyboard_SOURCES = keyboard.c
phatkeyboard_CFLAGS = `pkg-config --cflags gtk+-2.0` -I..
phatkeyboard_LIBS = `pkg-config --libs gtk+-2.0`
phatkeyboard_LDADD = ../phat/libphat.la

phatpad_SOURCES = pad.c
phatpad_CFLAGS = `pkg-config --cflags gtk+-2.0` -I..
phatpad_LIBS = `pkg-config --libs gtk+-2.0`
phatpad_LDADD = ../phat/libphat.la

phatknob_SOURCES = knob.c
phatknob_CFLAGS = `pkg-config --cflags gtk+-2.0` -I..
phatknob_LIBS = `pkg-config --libs gtk+-2.0`
phatknob_LDADD = ../phat/libphat.la

